--- a/art_felt_index.html
+++ b/art_felt_index.html
@@ -184,7 +184,7 @@
 
 					<div class="col-xs-6 col-md-3 acrylic">
 					    <a href="#"  class="thumbnail">
-					      <img src="ship.jpg" alt="acrylic gallery">
+					      <img src="ship.png" alt="acrylic gallery">
 					    <h3 class="artists-sm">Acrylic</h3>
 						</a>
 					</div>
